# ai_agents_course

./: .gitignore  README.md  main.py  pyproject.toml
ai_agents_course/final_project/: readme.md
ai_agents_course/topic_0_llm/: readme.md
ai_agents_course/topic_0_llm/example_1_compare_llm/: download_models.py  run_compare.py
ai_agents_course/topic_0_llm/example_2_codegen_llm/: code_eval.py  data.py  run_eval.py
ai_agents_course/topic_1_rag/: readme.md
ai_agents_course/topic_1_rag/example_1_chunking_rag/: prepare_data.py  readme.md
ai_agents_course/topic_1_rag/example_2_benchmark_rag/: readme.md  run_benchmark_20.py
ai_agents_course/topic_1_rag/example_3_custom_rag/: readme.md  run_rag_eval.py
ai_agents_course/topic_1_rag/example_4_video_rag/: build_metadata.py  code_sample.py  demo_search.py  preload_models.py  transcribe_audio_to_txt.py
ai_agents_course/topic_1_rag/example_5_langchain_rag/: run_rag_langchain.py
ai_agents_course/topic_1_rag/example_6_comparison_rag/: data_ru.py  download_mirage_bench.py  run_rag_eval.py
ai_agents_course/topic_2_agents/: readme.md
ai_agents_course/topic_2_agents/example_1_react_agents/: agent_custom_react.py  agent_langchain_react.py  run_eval.py  (+5 more)
notebooks_course/seminars/: 01_rag_sborka_i_otsenka.ipynb  02_arhitektura_frejmvorkov.ipynb  03_sozdanie_agenta.ipynb  04_protokoly_mcp.ipynb  05_otsenka_agenta_programmirovanie.ipynb  06_zashita_ataka_monitoring.ipynb
notebooks_rag/: [1.0]_rag_initial.ipynb  [2.0]_rag_metrics.ipynb  [3.0]_rag_chunking.ipynb  [4.0]_rag_improvements.ipynb  sample_rag.py
src/: common.py
(+30 files in other folders)
